--- a/war/iframe.html
+++ b/war/iframe.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="ISO-8859-1">
-<title>Insert title here</title>
+<meta charset="UTF-8">
 </head>
 <body>
+Use the sliders to change the simulation parameters.
 </body>
 </html>
